[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Pachinko/Pin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/Background.png" type="Texture" id=3]
[ext_resource path="res://UI/Pachinko/Board.gd" type="Script" id=4]
[ext_resource path="res://UI/Pachinko/Resetter.gd" type="Script" id=5]
[ext_resource path="res://UI/Pachinko/PrizePlatform.tscn" type="PackedScene" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 5.0
bounce = -0.25

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.68494, 7.72644 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.2191
height = 85.7104

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.48334, 23.0229 )

[sub_resource type="CircleShape2D" id=5]
radius = 5.4867

[node name="Board" type="Node2D"]
position = Vector2( 211, 94 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 223.006, 220.486 )
texture = ExtResource( 3 )

[node name="Border" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8192
collision_mask = 24576
physics_material_override = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Border"]
polygon = PoolVector2Array( 404.578, 301.657, 400.168, 317.721, 395.444, 333.155, 385.364, 350.794, 363.316, 378.827, 352.606, 391.427, 339.377, 403.396, 320.478, 417.255, 300.32, 428.279, 285.201, 435.524, 265.987, 441.194, 238.268, 447.178, 207.4, 449.698, 192.281, 449.068, 167.083, 445.288, 139.05, 437.729, 119.836, 430.169, 98.1022, 416.94, 82.0382, 405.601, 62.1945, 386.387, 34.4762, 354.259, 17.4673, 326.541, 7.70288, 302.917, 1.40327, 279.924, -4.26637, 244.016, -6.47124, 209.368, -1.11658, 165.271, 11.7976, 121.804, 33.8462, 84.006, 56.5248, 58.8076, 90.8577, 25.7347, 132.75, 4.316, 190.391, -7.65324, 245.513, -9.54313, 301.894, -8.2832, 327.093, -0.0937347, 363.946, 23.8448, 404.578, 63.2173, 423.477, 85.2659, 438.596, 119.599, 450.88, 170.941, 450.565, 445.918, 442.061, 448.753, 429.146, 450.643, 414.342, 450.013, 403.948, 444.973, 398.278, 443.084, 323.313, 441.509, 288.98, 440.249, 276.381, 438.359, 288.52, 434.621, 298.773, 430.025, 333.421, 432.853, 393.869, 437.099, 411.508, 438.359, 411.193, 441.824, 413.712, 443.398, 421.902, 443.714, 422.847, 444.973, 433.241, 445.603, 435.131, 444.028, 441.431, 443.714, 444.58, 441.509, 444.895, 436.154, 445.526, 171.571, 442.376, 160.231, 438.281, 143.852, 434.816, 130.308, 429.776, 113.614, 417.492, 89.6758, 406.468, 74.5567, 393.554, 60.3826, 378.75, 45.8935, 372.135, 38.019, 351.661, 24.1599, 327.408, 9.3558, 307.879, 1.48129, 294.335, -1.66851, 256.222, -3.5584, 219.055, -3.24342, 185.982, -0.723572, 169.603, 2.11127, 149.129, 7.78091, 135.9, 12.1906, 119.521, 19.1202, 98.1022, 31.4044, 84.873, 41.7988, 69.124, 55.3429, 51.8001, 73.2968, 39.5159, 90.6207, 25.9717, 112.039, 11.7976, 147.002, 6.12791, 164.956, 3.29309, 179.76, 0.14328, 205.589, 0.458267, 237.087, 1.71823, 253.466, 6.12796, 279.294, 14.9474, 306.382, 22.8219, 324.336, 34.1612, 344.81, 48.3353, 364.339, 62.5094, 381.033, 79.2034, 396.152, 101.882, 412.846, 119.206, 422.61, 141.569, 432.059, 162.673, 438.044, 184.407, 442.454, 208.03, 444.344, 232.599, 442.769, 261.892, 436.469, 289.295, 427.02, 309.139, 417.255, 336.542, 397.412, 366.465, 367.488, 379.38, 350.794, 390.404, 330.951, 400.168, 301.028, 403.948, 278.349, 403.948, 222.283, 401.743, 174.406, 397.019, 160.231, 389.144, 140.388, 376.23, 116.134, 365.521, 98.8103, 350.717, 79.9115, 336.542, 63.8475, 333.708, 61.0127, 330.341, 59.8011, 333.494, 57.4886, 337.699, 57.2784, 340.221, 58.75, 346.738, 65.2669, 359.982, 79.7724, 365.659, 86.92, 373.647, 98.2721, 381.425, 111.306, 388.153, 124.13, 392.147, 131.488, 399.715, 150.828, 403.289, 161.97, 407.493, 179.419, 408.544, 199.39, 408.755, 233.026, 409.806, 306.184, 410.857, 402.046, 406.021, 402.466 )

[node name="PinsManager" type="Node2D" parent="."]

[node name="Pin2" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 139.191, 106.984 )

[node name="Pin3" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 235.729, 107.767 )

[node name="Pin5" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 35.1647, 137.621 )

[node name="Pin6" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 106.092, 156.003 )

[node name="Pin7" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 191.479, 165.316 )

[node name="Pin8" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 272.847, 156.156 )

[node name="Pin9" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 320.963, 126.258 )

[node name="Pin10" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 146.998, 204.858 )

[node name="Pin11" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 135.132, 224.052 )

[node name="Pin12" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 145.843, 244.401 )

[node name="Pin13" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 241.301, 215.442 )

[node name="Pin16" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 315.265, 226.24 )

[node name="Pin17" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 75.8047, 221.53 )

[node name="Pin20" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 248.457, 275.564 )

[node name="Pin21" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 301.49, 309.295 )

[node name="Pin22" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 206.738, 348.186 )

[node name="Pin23" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 262.599, 348.186 )

[node name="Pin29" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 309.796, 360.172 )

[node name="Pin24" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 155.826, 350.307 )

[node name="Pin25" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 89.1405, 308.89 )

[node name="Pin28" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 40.7655, 350.317 )

[node name="Pin26" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 350.281, 289.496 )

[node name="Pin27" parent="PinsManager" instance=ExtResource( 2 )]
position = Vector2( 336.679, 320.339 )

[node name="Spring" type="Area2D" parent="."]
position = Vector2( 430.014, 433.011 )
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spring"]
position = Vector2( -0.667358, 0.667358 )
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="."]
position = Vector2( 209.714, 423.823 )
collision_layer = 8192
collision_mask = 16384
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetter"]
position = Vector2( -0.624481, -0.0298462 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="Resetter"]
wait_time = 1.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="Resetter"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -50.0
margin_top = -20.0
margin_right = 48.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 335.938, 38.6812 )
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -0.667419, -4.33823 )
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Door"]
margin_left = -3.49719
margin_top = -26.6663
margin_right = 1.50281
margin_bottom = 18.3337
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Door"]
position = Vector2( -9.51074, -4.33823 )
collision_layer = 8192
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
shape = SubResource( 5 )

[node name="StrengthBar" type="ProgressBar" parent="."]
margin_left = 45.0
margin_top = 458.0
margin_right = 451.0
margin_bottom = 493.0
min_value = 400.0
max_value = 1550.0
step = 20.0
value = 1000.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlatformManager" type="Node2D" parent="."]

[node name="PrizePlatform" parent="PlatformManager" instance=ExtResource( 6 )]
position = Vector2( 363.453, 231.931 )
variety = 2

[node name="PrizePlatform2" parent="PlatformManager" instance=ExtResource( 6 )]
position = Vector2( 306.177, 270.822 )
variety = 3

[node name="PrizePlatform3" parent="PlatformManager" instance=ExtResource( 6 )]
position = Vector2( 195.868, 224.86 )
variety = 1

[node name="PrizePlatform5" parent="PlatformManager" instance=ExtResource( 6 )]
position = Vector2( 235.466, 326.683 )
variety = 4

[node name="PrizePlatform4" parent="PlatformManager" instance=ExtResource( 6 )]
position = Vector2( 103.238, 202.94 )

[node name="LabelsManager" type="Node2D" parent="."]

[node name="A" type="Label" parent="LabelsManager"]
margin_left = 79.6948
margin_top = 184.084
margin_right = 123.695
margin_bottom = 198.084
text = "+1 Ball"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Label" parent="LabelsManager"]
margin_left = 151.532
margin_top = 201.482
margin_right = 234.532
margin_bottom = 215.482
text = "+1 Skill Point"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Label" parent="LabelsManager"]
margin_left = 333.932
margin_top = 211.023
margin_right = 390.932
margin_bottom = 225.023
text = "+10 Ants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Label" parent="LabelsManager"]
margin_left = 264.901
margin_top = 246.942
margin_right = 343.901
margin_bottom = 260.942
text = "+5 Max Ants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="LabelsManager"]
margin_left = 188.574
margin_top = 301.381
margin_right = 278.574
margin_bottom = 315.381
text = "+2 Skill Points"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Spring" to="." method="_on_Spring_body_entered"]
[connection signal="body_exited" from="Spring" to="." method="_on_Spring_body_exited"]
[connection signal="body_entered" from="Resetter" to="Resetter" method="_on_Resetter_body_entered"]
[connection signal="body_exited" from="Resetter" to="Resetter" method="_on_Resetter_body_exited"]
[connection signal="timeout" from="Resetter/Timer" to="Resetter" method="_on_Timer_timeout"]
[connection signal="body_exited" from="Door/Area2D" to="." method="_on_Area2D_body_exited"]

[editable path="PinsManager/Pin2"]
